--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.6.2"
+    "hono": "^4.6.2",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
