--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "google-account-permission-handler-backend",
   "scripts": {
+    "build": "wrangler deploy src/index.ts --dry-run --minify --outdir=dist && node scripts/build.mjs",
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
