--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "wrangler deploy src/index.ts --dry-run --minify --outdir=dist && node scripts/build.mjs",
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "hono": "^4.6.2",
